--- a/OdraIDE/OdraIDE.SolutionExplorer.Connections/Resources/Images.resx
+++ b/OdraIDE/OdraIDE.SolutionExplorer.Connections/Resources/Images.resx
@@ -151,10 +151,19 @@
   <data name="NewSolution" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>NewSolution.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GreenBall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>GreenBall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PurpleBall" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>PurpleBall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="field" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>field.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="method" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>method.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="reference" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>reference.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Gear" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Gear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
